add calculate fitness value